* Got most of the old InstallManifest.pm ported over to the new InstallManifest.pm. I am certain though that it is riddled with bugs, I've done no testing at all yet and won't until I finish the migration. * Updated 'AN::Tools::Get->data_and_time' to take 'split_date_time', 'no_spaces', and 'time_only' to allow the called to request the date and time as a single returned value instead of two strings, to replace spaces with '_' and to return only the time. Also removed the ability to call it with the arguments passed as array values. * Methods migrated to InstallManifest.pm today are below. All were updated to take arguments as per proper modules and to take all arguments as hash keys instead of as an array. Cleaned up all of the 'remote_call' calls and cleaned up logging and properly escaped many '$an->data->...' calls. ** backup_files ** backup_files_on_node ** check_blkid_partition ** check_config_for_anvil ** check_drbd_if_force_primary_is_needed ** check_device_for_drbd_metadata ** check_fencing_on_node ** check_for_drbd_metadata ** configure_clvmd ** configure_cman ** configure_daemons ** configure_daemons_on_node ** configure_gfs2 ** configure_ipmi ** configure_ipmi_on_node ** configure_network ** configure_network_on_node ** configure_ntp ** configure_ntp_on_node ** configure_scancore ** configure_scancore_on_node ** configure_selinux ** configure_selinux_on_node ** configure_ssh ** configure_storage_stage1 ** configure_storage_stage2 ** configure_storage_stage3 ** configure_striker_tools ** create_lvm_vgs ** create_lvm_pvs ** create_partition_on_node ** do_drbd_attach_on_node ** do_drbd_connect_on_node ** do_drbd_primary_on_node ** do_node_reboot ** drbd_first_start ** enable_tools ** enable_tools_on_node ** generate_cluster_conf ** generate_drbd_config_files ** generate_lvm_conf ** get_chkconfig_data ** get_daemon_state ** get_installed_package_list ** get_node_rsa_public_key ** get_partition_data_from_node ** install_programs ** install_programs_on_node **

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -724,6 +724,14 @@ The 'AN::Tools::Cman' module's 'migrate_server()' method was called without pass
 
 The 'AN::Tools::Get' module's 'manifest_data()' method was called without passing in a manifest UUID.
 
+=head2 C<122>
+
+The 'AN::Tools::Get' module's 'manifest_data()' method was called with an invalid manifest UUID.
+
+=head2 C<123>
+
+The 'AN::Tools::Striker' module's 'configure_ssh_local()' method was called without passing in an Anvil! name.
+
 
 =head1 SEE ALSO
 
