--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -732,6 +732,10 @@ The 'AN::Tools::Get' module's 'manifest_data()' method was called with an invali
 
 The 'AN::Tools::Striker' module's 'configure_ssh_local()' method was called without passing in an Anvil! name.
 
+=head2 C<124>
+
+The 'AN::Tools::Striker' module's 'update_peers()' method was called without passing in an Anvil! name.
+
 
 =head1 SEE ALSO
 
