* Booting servers via the Striker WebUI works again!! This is a major milestone as it's the first function to be restored since starting the (nearly complete) overhaul of the code base. * Created tools/anvil-boot-server which Striker uses over ssh on a node to actually boot the requested server. This allows the use of the existing 'AN::Tools::Cman->boot_server()' logic. * Renamed almost all instances of 'vm' to 'server' in AN::Tools::Striker to get in-line with the main terms used with users. Also changed all instances of 'anvil' to be 'anvil_uuid' and made the 'anvil_name' variable available where Striker or tools need the Anvil! name instead of the UUID. * Moved the old Striker->process_task() over to the new Striker->_process_task() and commented out, for now, methods still to be ported over.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -736,6 +736,14 @@ The 'AN::Tools::Striker' module's 'configure_ssh_local()' method was called with
 
 The 'AN::Tools::Striker' module's 'update_peers()' method was called without passing in an Anvil! name.
 
+=head2 C<125>
+
+The 'AN::Tools::Striker' module's '_start_server()' method was called without passing in an server name to boot.
+
+=head2 C<126>
+
+The 'AN::Tools::Striker' module's '_start_server()' failed to find a node that was online and running the cluster software.
+
 
 =head1 SEE ALSO
 
