* Fixed a bug in AN::Tools::Check->ping() where the safety check was still for the 'target' parameter being passed instead of the new 'ping' parameter. * Created AN::Tools::Get->peer_network_details() to return the peer's BCN, SN and IFN IPs based on the data in ScanCore's 'nodes' table instead of the old '<short_hostname>.{bcn,sn,ifn}'. * Created AN::Tools::Cman->find_node_in_cluster() to find a node in the active Anvil! that is both accessible and has rgmanager running (so that we have a node to make clusvcadm calls to). * Fixed a bug in AN::Tools::Cman->get_clustat_data() where the default stop reason was 'clear' instead of 'clean'. * Updated AN::Tools::Get->local_anvil_details() to now return the anvil_uuid as well. * Created AN::Tools::Striker->_confirm_stop_server() and ->_stop_server(), though neither have been tested yet. * Updated AN::Tools::Striker->load_anvil() to call $an->ScanCore->parse_anvil_data() if $an->data->{anvils}{$anvil_uuid}{name} wasn't set on the first check, then try again. * Updated AN::Tools::Striker->mark_node_as_clean_on() to find the node_name in the hosts table as the pre-update sanity check (the old method was flawed...)
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -744,6 +744,18 @@ The 'AN::Tools::Striker' module's '_start_server()' method was called without pa
 
 The 'AN::Tools::Striker' module's '_start_server()' failed to find a node that was online and running the cluster software.
 
+=head2 C<127>
+
+The 'AN::Tools::Striker' module's '_stop_server()' method was called without passing in an server name to shut down.
+
+=head2 C<128>
+
+The 'AN::Tools::Striker' module's '_stop_server()' failed to find a node that was online and running the cluster software.
+
+=head2 C<129>
+
+The 'AN::Tools::Get' module's 'peer_network_details()' failed to find the Anvil! peer for the node.
+
 
 =head1 SEE ALSO
 
