--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -756,6 +756,30 @@ The 'AN::Tools::Striker' module's '_stop_server()' failed to find a node that wa
 
 The 'AN::Tools::Get' module's 'peer_network_details()' failed to find the Anvil! peer for the node.
 
+=head2 C<130>
+
+The 'AN::Tools::Striker' module's '_migrate_server()' method was called without passing in an server name to migrate.
+
+=head2 C<131>
+
+The 'AN::Tools::Striker' module's '_migrate_server()' method was asked to migrate a server, but neither node was accessible or in the cluster stack.
+
+=head2 C<132>
+
+The 'AN::Tools::Striker' module's '_force_off_server()' method was called without passing in an Anvil! UUID.
+
+=head2 C<133>
+
+The 'AN::Tools::Striker' module's '_force_off_server()' method was asked to force off a server which reports as being on a host that does not match a node in the Anvil!.
+
+=head2 C<134>
+
+The 'AN::Tools::Striker' module's '_delete_server()' method was called without passing in an Anvil! UUID.
+
+=head2 C<135>
+
+The 'AN::Tools::Striker' module's '_delete_server()' method was asked to delete a server, but neither node was accessible or in the cluster stack.
+
 
 =head1 SEE ALSO
 
