* Note: The last commit updated AN::Tools::DB->connect_to_databases() to set the 'sys::read_db_id' ID to the local host when possible. * Created 'AN::Tools::Check->on_same_network()' which checks to see if the local machine has a network interface on the same subnet as the passed in IP address. * Updated 'AN::Tools::Get->ip()' to take an option node_uuid and, if passed, use it's cached 'etc_hosts' data to translate the name to an IP. If that fails, or if no node_uuid is passed, the old 'gethostip' shell call is tried. * Updated 'AN::Tools::Remote->synchronous_command_run()' to take each node's IP, ssh port and password separately. * Updated 'AN::Tools::ScanCore->target_power()' to try and translate the '-a X' portion of the cached power_check value to an IP address. * Fixed several bugs and typos related to the recent commits pushed in while unable to test the last few days. Striker now compiles and runs again. * Finished 'AN::Tools::Striker->_fence_node()', though it has not been tested yet.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -816,6 +816,18 @@ The 'AN::Tools::Striker' module's '_fence_node()' method was called without pass
 
 The 'AN::Tools::Striker' module's '_fence_node()' method was called without passing in an Anvil! node name.
 
+=head2 C<145>
+
+The 'AN::Tools::Check' module's 'on_same_network()' method was called without passing in a remote host name or IP address.
+
+=head2 C<146>
+
+The 'AN::Tools::Check' module's 'on_same_network()' method was given a host name that couldn't be translated to an IP address.
+
+=head2 C<147>
+
+The 'AN::Tools::Check' module's 'on_same_network()' method was given a host name that was translated to a string that isn't a valid IP address.
+
 
 =head1 SEE ALSO
 
