* Created the new 'anvil-stop-server' tool which is basically a wrapper for 'AN::Tools::Cman->stop_server()' that Striker dashboards can call. * Created the new 'AN::Tools::Striker->_cold_stop_anvil()' method which handles cold-stopping an Anvil! using the 'anvil-safe-stop' and 'anvil-stop-server' tools. * Created the new 'AN::Tools::Striker->_dual_boot()' method which boots both nodes in an Anvil!. * Updated a bunch of old-style 'or die...' calls for shell calls with the newer 'AN::Tools::Alert->error()' methods. * Updated 'AN::Tools::System->poweroff()' to print 'poweroff: <hostname>' so that 'AN::Tools::Striker->_cold_stop_anvil()' can use the 'anvil-safe-stop' logic to stop the proper node first and know which node was shut down.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -852,6 +852,10 @@ The 'AN::Tools::Striker' module's '_poweron_node()' method was called without pa
 
 The 'AN::Tools::Striker' module's '_poweron_node()' method was called with a node name that wasn't mapped to a node key for the active Anvil!.
 
+=head2 C<154>
+
+The 'AN::Tools::Striker' module's '_dual_join()' method was called without passing in an Anvil! UUID.
+
 
 =head1 SEE ALSO
 
