* Changed 'AN::Tools::Remote->synchronous_command_run()' to no longer take the target, port and password for the nodes because this can be pulled from sys easily enough. * Possibly fixed a bug where the output from 'AN::Tools::Remote->synchronous_command_run()' was being stored by the target instead of node name as the hash key, untested though. * Updated 'AN::Tools::Remote->rsync()' to take a port argument. * Fixed 'AN::Tools::Striker->scan_anvil()' to do a post scan calculations in the right place. * Fixed several methods and calls to use 'node_name' instead of the 'node' CGI variable. * Fixed a bug in 'AN::Tools::Striker->_dual_join()' where it was checking for a node which made no sense... * Cleaned up 'AN::Tools::Striker->_parse_daemons()'. * Updated 'AN::Tools::Striker->_parse_drbdadm_dumpxml()' to record 'node::$node_name::drbd::resource::$resource::{connection_state,role,disk_state}' properly. * Re-enabled HTML template comments showing the template name and source file for the time being. * Updated 'mediaLibrary' to use the new 'AN::Tools::MediaLibrary' module properly (untested though, so 'properly' is used generously).
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -806,7 +806,7 @@ The 'AN::Tools::Striker' module's '_dual_join()' method was called without passi
 
 =head2 C<142>
 
-The 'AN::Tools::Striker' module's '_dual_join()' method was called without passing in an Anvil! node name.
+...free...
 
 =head2 C<143>
 
