* Migrated (and cleaned up) all of functions related to managing LSI controllers to 'AN::Tools::HardwareLSI'. * Cleaned up 'AN::Tools::Readable' and removed the ability to call them with an array, to bring them in line with the rest of how AN::Tools modules work. * Added to 'AN::Tools::Striker'; ** _confirm_install_manifest_run ** _get_storage_data ** _get_striker_prefix_and_domain ** _show_existing_install_manifests * Tested and fixed where necessary all of the core Striker UI function (server management, at least). Much still to do, but this is a significant milestone in the rebase project. * Started working on Install Manifest stuff now that it has been moved over as well. This is broken still, but it is coming along finally.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -442,7 +442,7 @@ The 'AN::Tools::Get->remote_anvil_details()' method was called but the 'anvil' v
 
 =head2 C<51>
 
-The 'AN::Tools::Get->server_node()' method was called but 'server' and 'uuid' values were not set. One of them must be passed.
+The 'AN::Tools::Get->server_data()' method was called but 'server' and 'uuid' values were not set. One of them must be passed.
 
 =head2 C<52>
 
@@ -855,6 +855,14 @@ The 'AN::Tools::Striker' module's '_poweron_node()' method was called with a nod
 =head2 C<154>
 
 The 'AN::Tools::Striker' module's '_dual_join()' method was called without passing in an Anvil! UUID.
+
+=head2 C<155>
+
+The 'AN::Tools::Striker' module's '_get_storage_data()' method was called without an Anvil! UUID CGI variable set.
+
+=head2 C<156>
+
+The 'AN::Tools::Striker' module's '_get_storage_data()' method was called without Anvil! node name CGI variable set.
 
 
 =head1 SEE ALSO
