--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -806,7 +806,7 @@ The 'AN::Tools::Striker' module's '_dual_join()' method was called without passi
 
 =head2 C<142>
 
-...free...
+The 'AN::Tools::Striker' module's '_cold_stop_anvil' saw a node power off but failed to parse out the file name. This is likely a program error.
 
 =head2 C<143>
 
@@ -863,6 +863,18 @@ The 'AN::Tools::Striker' module's '_get_storage_data()' method was called withou
 =head2 C<156>
 
 The 'AN::Tools::Striker' module's '_get_storage_data()' method was called without Anvil! node name CGI variable set.
+
+=head2 C<157>
+
+The 'AN::Tools::Striker' module's '_cold_stop_anvil()' saw a node power off but failed to find the node's UUID. This is likely a program error.
+
+=head2 C<158>
+
+The 'AN::Tools::ScanCore' module's 'update_server_stop_reason()' was called without a server name being passed in.
+
+=head2 C<159>
+
+
 
 
 =head1 SEE ALSO
