* Debugging AN::Tools::InstallManifest and related calls and added a lot of logging towards that effort. * Fixed a bug in 'AN::Tools::Get->manifest_data()' where 'AN::Tools::Validate->is_uuid()' was being called improperly. * Updated 'AN::Tools::InstallManifest->configure_cman()' to generate a new cluster.conf if the version wasn't read properly, regardless of whether somethine was read in. * Fixed a bug in 'AN::Tools::InstallManifest->get_daemon_state()' where the node name was being passed into '->get_daemon_state()' as the target. * Fixed a bug in 'AN::Tools::InstallManifest->configure_network_on_node()' where the 'ifn_bridge1' gateway value was missing a closing quote. Also fixed a bug where the old ifcfg-eth* files were not being deleted. * Fixed a bug in 'AN::Tools::InstallManifest->configure_scancore_on_node()' where the 'AN::Tools::Storage->rsync()' method was being called incorrectly. * Fixed multiple Install Manifest form-related bugs, mostly related to cgi::anvil_nodeX_name' being replaced by 'sys::anvil::nodeX::name' (and the same for sys::anvil::password), calling cgi-bin/striker and missing manifest_uuid. * Added 'AN::Tools::InstallManifest->connect_to_node()' and '->create_shared_lv()' which were missed in the migration. * Updated 'AN::Tools::InstallManifest->do_node_reboot()' to use the 'reboot' command because 'anvil-safe-start' can't find the node's UUID in the ScanCore database that early in the process. * Updated 'AN::Tools::InstallManifest->do_node_reboot()' to properly use the new "node name is hash key" system. * Fixed a bug in 'AN::Tools::InstallManifest->generate_lvm_conf()' where the method's header was the old function style header. * Fixed a bug in 'AN::Tools::InstallManifest->get_storage_pool_partitions()' where the for loop used node1 twice. * Fixed a bug in 'AN::Tools::InstallManifest->map_network()' where the mac hash keys were being blindly blanked (may not have actually been a bug...). * Updated 'AN::Tools::InstallManifest->parse_sc

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -874,7 +874,15 @@ The 'AN::Tools::ScanCore' module's 'update_server_stop_reason()' was called with
 
 =head2 C<159>
 
+The 'AN::Tools::InstallManifest' module's 'map_network_on_node()' method failed to match the node name being processed.
 
+=head2 C<160>
+
+The 'AN::Tools::InstallManifest' module's 'read_cluster_conf()' was called without a node name.
+
+=head2 C<161>
+
+The 'AN::Tools::InstallManifest' module's 'write_cluster_conf()' was called without a node name.
 
 
 =head1 SEE ALSO
