* Updated scan-server to check whether libvirtd is set to run on boot (in runlevels 3 and 5) and, if so, disables it again. This closes issue #70. * Created 'AN::Tools::System->daemon_boot_config()' which returns whether a service is set to boot on start or not for the various run levels and, if 'set' is passed, changes the boot time config. * Cleaned up a few --help comments in striker-installer.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -884,6 +884,14 @@ The 'AN::Tools::InstallManifest' module's 'read_cluster_conf()' was called witho
 
 The 'AN::Tools::InstallManifest' module's 'write_cluster_conf()' was called without a node name.
 
+=head2 C<162>
+
+The 'AN::Tools::System' module's 'daemon_boot_config()' was called without a daemon name.
+
+=head2 C<163>
+
+The 'AN::Tools::System' module's 'daemon_boot_config()' was called with an invalid 'set' value. Nnly 'on' or 'off' are valid.
+
 
 =head1 SEE ALSO
 
