* Added some logging to some more AN::Tools methods and added warnings to those that cause deep recursions and did some misc cleanup. * Created 'AN::Tools::Get->what_am_i()' that returns 'node' or 'dashboard'. * Modified 'AN::Tools::ScanCore->get_nodes_cache()' to return the cache of a certain type only. * Created 'AN::Tools::ScanCore->get_power_check_data()' that returns the power check command for all of the nodes that the caller known about. * Created 'AN::Tools::ScanCore->insert_or_update_variables()' that allows for data to be inserted (or updated) in the 'variables' table. This method allows for just the 'variable_value' to be updated. * Reworked ScanCore's 'read_cache_files()' to actually read from the database's cache now. * Reworked scan-ipmitool to pull it's data from the database instead of cache files as well. Moved the database connection up to accommodate this. * Also updated scan-ipmitool to set the peer's 'sys::node::<node_name>::last_seen' variable to 'off' or 'on' in preparation for the coming 'sys::single_node_start::enabled' feature. Also updated striker.conf with the new variables. * NOTE: the above changes to scan-ipmitool deprecate tools/anvil-report-ipmi-details. Once tested to be working, that tool will be deleted. * Updated the 'variables' database table to add the 'variable_section' column which will be used later to group variables in the UI.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -892,6 +892,11 @@ The 'AN::Tools::System' module's 'daemon_boot_config()' was called without a dae
 
 The 'AN::Tools::System' module's 'daemon_boot_config()' was called with an invalid 'set' value. Nnly 'on' or 'off' are valid.
 
+=head2 C<164>
+
+The 'AN::Tools::Web' module's 'insert_or_update_variables()' method was called without passing in an variable name.
+
+
 
 =head1 SEE ALSO
 
