* Updated 'AN::Tools::ScanCore->insert_or_update_variables()' to allow restricting the requested variable by a given table and UUID. * Created 'AN::Tools::ScanCore->read_variable()' to read a variable from the ScanCore database. * Created in ScanCore the update_db_variables() function to keep the variables table synced. * Updated the 'variables' table to add the columns 'variable_source_uuid' and 'variable_source_table' to flag a variable as belonging to a specific record from a specific table (like a hosts' host_uuid'). * Updated anvil-safe-start's in-development 'single node start' feature to add 'sys::single_node_start::boot_delay' that had a node pause for that period of time before giving up on the peer and trying to boot on its own (a-la DRBD's degraded wait for connection timeout m echanism). * Added some more of the logic to implement anvil-safe-start's in-development 'single node start', still much to do though.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -896,6 +896,10 @@ The 'AN::Tools::System' module's 'daemon_boot_config()' was called with an inval
 
 The 'AN::Tools::Web' module's 'insert_or_update_variables()' method was called without passing in an variable name.
 
+=head2 C<165>
+
+The 'AN::Tools::Web' module's 'read_variables()' method was called without passing in an variable name.
+
 
 
 =head1 SEE ALSO
