* Fixed several issues relating to managing a server when the server has not yet been added to the ScanCore database. It now works a lot better (boot, migration, etc works). * Updated 'AN::Tools::Get->server_data()' to read the running server's XML when possible, falling back to the XML definition file when not, and using the definition from the database as a last option. * Updated 'AN::Tools::Get->server_uuid()' to be a lot more robust in finding the anvil_uuid when it wasn't passed in. Also modernized it to use the new load_anvil() based access data. * Updated 'AN::Tools::Striker->load_anvil()' to return if the data was already loaded in an earlier call. * Fixed a bug in 'AN::Tools::Striker->_confirm_migrate_server()' where the server name wasn't set. Also fixed a display bug where the target wasn't displayed and the source of the server's RAM was from the wrong variable.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -900,7 +900,13 @@ The 'AN::Tools::Web' module's 'insert_or_update_variables()' method was called w
 
 The 'AN::Tools::Web' module's 'read_variables()' method was called without passing in an variable name.
 
+=head2 C<166>
 
+The 'AN::Tools::Get' module's 'server_uuid()' method was unable to gather the UUIDs of the Anvil! nodes.
+
+=head2 C<167>
+
+The 'AN::Tools::Get' module's 'server_xml()' method was called without a server name being passed.
 
 =head1 SEE ALSO
 
