* Much more work done in scan_storcli of normalizing the insane and insanely inconsistent output from storcli... I think that the adapter, cachevault (FBU) and BBU data is now ready for use and the SQL schemas for them are in place (but untested). * Created 'AN::Tools::Log->aligned_entries()' which takes a hash reference and logs all the key names and the hash's values in an aligned, easier to read way. * Fixed an error call in 'AN::Tools::Readable->hr_to_bytes()'. Also added some logging to the module in general.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -908,6 +908,10 @@ The 'AN::Tools::Get' module's 'server_uuid()' method was unable to gather the UU
 
 The 'AN::Tools::Get' module's 'server_xml()' method was called without a server name being passed.
 
+=head2 C<168>
+
+The 'AN::Tools::Readable' module's 'hr_to_bytes()' method was called with a value that the human readable size could not be determined from.
+
 =head1 SEE ALSO
 
 Other modules in the AN::Tools suite:
