* Flipped the return for 'AN::Tools::Check->ping()' so that '1' means the target was pinged and '0' means it wasn't. Also made it an error for no 'ping' value to be passed in. * Created 'AN::Tools::Get->upses()' and '->upses_under_node()' that return all UPSes under an Anvil! or the UPSes under a given node, respectively. * Created 'AN::Tools::ScanCore->get_node_name_from_node_uuid()' that returns a node's UUID when passed in its node name. * Created 'AN::Tools::Striker->access_all_upses()' that returns '1' if all UPSes under an Anvil! are pingable. * Added a check to Anvil! Cold Stop requests to make sure all UPSes are accessible and, if not, abort the Cold Stop request immediately. * Fixed 'AN::Tools::Log->adjust_log_level()' to set 'sys::log_level' by default unless a hash key is passed in. Then re-added a call to this method to all the scan agents and ScanCore itself setting the log level. * Fixed a bug in tools/striker-usb-insert where the '-O ^has_journal' wasn't being used when a user defined an FS label.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -912,6 +912,22 @@ The 'AN::Tools::Get' module's 'server_xml()' method was called without a server 
 
 The 'AN::Tools::Readable' module's 'hr_to_bytes()' method was called with a value that the human readable size could not be determined from.
 
+=head2 C<169>
+
+The 'AN::Tools::Get' module's 'upses_under_node()' method was called without a node name or a node UUID.
+
+=head2 C<170>
+
+The 'AN::Tools::Get' module's 'upses_under_node()' method was called with a node name which wasn't found in the database.
+
+=head2 C<171>
+
+The 'AN::Tools::Get' module's 'upses()' method was called without an Anvil! UUID.
+
+=head2 C<172>
+
+The 'AN::Tools::Check' module's 'ping()' method was called without 'ping' being set.
+
 =head1 SEE ALSO
 
 Other modules in the AN::Tools suite:
