* Enabled some log messages at log level 2 to help diagnose some reported bugs. * Added three new state change checks in scan-clusat. * Created 'AN::Tools::Get->ip_from_hostname()' that translates a passed-in host name to an IP address using various checks (matching the host name to a node, gethostip -d). * Used a more modern error method call in 'AN::Tools::Remote->remote_call()'. Also now check to see if the target is a hostname and, if it is, use '->ip_from_hostname()' to try and resolve it. * Fixed how Striker handles a server that has entered a 'Failed' state. * Added a crude form of debugging to 'AN::Tools::String->get()' where it sets up a '<pre>' element and prints to STDOUT when a particular work key to debug is entered (normal logging can't be used in this method without creating an infinite loop). * Fixed the logrotate entry for ScanCore.log and added the missing entry for the logrotate section in 'configure'. * Added a notice striker dashboard's /etc/hosts telling users that the system is consulted last, not first, when resolving host names.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -430,7 +430,7 @@ The 'AN::Tools::Get->ip()' method was called without the 'host' parameter.
 
 =head2 C<48>
 
-The 'AN::Tools::DB->initialize_db()' method was called but 'path::scancore_sql' wasn't set. This is usually caused by running a ScanCore agent without ever having run ScanCore itself on the machine.
+The 'AN::Tools::DB' module's 'initialize_db()' method was called but 'path::scancore_sql' wasn't set. This is usually caused by running a ScanCore agent without ever having run ScanCore itself on the machine.
 
 =head2 C<49>
 
@@ -927,6 +927,18 @@ The 'AN::Tools::Get' module's 'upses()' method was called without an Anvil! UUID
 =head2 C<172>
 
 The 'AN::Tools::Check' module's 'ping()' method was called without 'ping' being set.
+
+=head2 C<173>
+
+The 'AN::Tools::Get' module's 'ip_from_hostname()' method was called without a host name being set.
+
+=head2 C<174>
+
+The 'AN::Tools::Remote' module's 'remote_call()' method was called without a target being set.
+
+=head2 C<175>
+
+The 'AN::Tools::Remote' module's 'remote_call()' was asked to connecto to a target machine on an invalid TCP port.
 
 =head1 SEE ALSO
 
