NOTE: This commit also requires a reload of the ScanCore database. Hopefully the last one for a while. * Updated 'AN::Tools::Alert->error()' to determine if the error message is going to a browser and, if so, wrap it in a <pre> element to make it display better. * Added a check in 'AN::Tools::Striker->load_anvil()' to detect when it is being called from a web browser before both nodes have had ScanCore run at least once and throw a more useful error when not. * Updated 'AN::Tools::Log->adjust_log_level()' to set 'scancore::user_set_log_level' so that user-set log levels will be passed on to invoked agents again properly. * Updated ScanCore to call 'AN::Tools::Log->adjust_log_level()' after re-loading the config at the start of a scan loop. * Updated ScanCore's 'process_alerts()' function to sort by agent name, then modified data and finally by the agent_sort value. This way, if messages were left unsent because of a direct agent invocation or bug, the alerts in the email when it does work will be sorted chronologically. * Did a lot of log cleanup across the board. * Fixed scan-storcli to store batched SQL queries in the 'sys::sql' hash key. * The scan-storcli agent now records data to the SQL server! It's only the controller so far, and changes to the data aren't processed yet, but we're cresting the hard part. * Fixed bugs in the scan-storcli.sql schema file.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -938,7 +938,11 @@ The 'AN::Tools::Remote' module's 'remote_call()' method was called without a tar
 
 =head2 C<175>
 
-The 'AN::Tools::Remote' module's 'remote_call()' was asked to connecto to a target machine on an invalid TCP port.
+The 'AN::Tools::Remote' module's 'remote_call()' method was asked to connecto to a target machine on an invalid TCP port.
+
+=head2 C<176>
+
+The 'AN::Tools::Striker' module's 'load_anvil()' method was called before ScanCore has run on both nodes. Please make sure that ScanCore is enabled and has run at least once.
 
 =head1 SEE ALSO
 
