OK, so, ya... Today was a day of corner-case-bugs-a-plenty. This is good, many edge-cases are fixed! \o/ * Updated 'AN::Tools::Striker->_cold_stop_anvil' so that, before processing a subtask, we wait to make sure both nodes are no longer pingable before reprogramming the UPSes to power off/cycle. * Bumped up the RAM allowed to be used by ScanCore to 512 MiB. * Updated ScanCore to now, on start, check to see both if another instance is running and, if so, check to see when it last updated the database. If it was more than 300 seconds ago, it assumes that ScanCore hung and will kill it (and any child process scan agents0, then exit. This way, ScanCore will recover if something causes it to hang up. * Updated anvil-safe-start to now check the storage startup state when running a single-node-start sequence. Also updated it so that, if the node needs to suicide, it does so using ipmi instead of 'echo c', which won't work when doing a single-node-start boot.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -926,7 +926,7 @@ The 'AN::Tools::Get' module's 'upses()' method was called without an Anvil! UUID
 
 =head2 C<172>
 
-The 'AN::Tools::Check' module's 'ping()' method was called without 'ping' being set.
+The 'AN::Tools::Check' module's 'ping()' method was called without 'ip' being set.
 
 =head2 C<173>
 
