* Created Get->dr_job_data() and ->dr_target_data(), ScanCore->get_dr_jobs(), ->get_dr_targets(), ->insert_or_update_dr_jobs() and ->insert_or_update_dr_targets() for processing DR targets and jobs. * Updated the ScanCore schema for DR jobs and targets to use names and have a section for notes. * Added several functions to 'configure' to support the new DR function.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -952,6 +952,14 @@ The 'AN::Tools::Get' module's 'dr_target_data()' method was called without passi
 
 The 'AN::Tools::Get' module's 'dr_target_data()' method was called with an invalid DR Target UUID.
 
+=head2 C<179>
+
+The 'AN::Tools::Get' module's 'dr_target_data()' method was called but neither an DR target name or UUID was passed in.
+
+=head2 C<180>
+
+The 'AN::Tools::Get' module's 'dr_job_data()' method was called but neither an DR job name or UUID was passed in.
+
 
 =head2 C<999>
 
