--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -960,6 +960,22 @@ The 'AN::Tools::Get' module's 'dr_target_data()' method was called but neither a
 
 The 'AN::Tools::Get' module's 'dr_job_data()' method was called but neither an DR job name or UUID was passed in.
 
+=head2 C<181>
+
+The 'AN::Tools::ScanCore' module's 'insert_or_update_servers()' method was called without passing in a server name or server UUID.
+
+=head2 C<182>
+
+The 'AN::Tools::ScanCore' module's 'insert_or_update_servers()' method was called without passing in an Anvil! name.
+
+=head2 C<183>
+
+The 'AN::Tools::ScanCore' module's 'insert_or_update_servers()' method was called without passing in the XML definition.
+
+=head2 C<184>
+
+The 'AN::Tools::ScanCore' module's 'insert_or_update_servers()' method was called with 'just_definition', but no server UUID or name was passed in.
+
 
 =head2 C<999>
 
